# ATRI_PROJ

./: README.md  bot.py  install_deps.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: backend-ci.yml  frontend-ci.yml  persona-ci.yml
plugins/: command_list.py  greeting.py  help.py  media_echo_plugin.py  models.py  status.py  weather.py
plugins/daily60s/: __init__.py  config.py  daily60s.py
plugins/db_core/: __init__.py  db_init.py  db_manager.py  model_registry.py
plugins/inactive_guard/: __init__.py  config.py  guard.py
plugins/memory/: README.md  __init__.py  ai_processor.py  chat-completion.py  core.py  decay.py  message_queue.py  multi_round_chat.py  plugin.py  processor.py  storage.py  todo
plugins/memory/api/: __init__.py  llm_api.py
plugins/memory/core/: __init__.py  memory_system.py  retriever.py
plugins/memory/processing/: __init__.py  ai.py  base.py  decay.py  prompt.py
plugins/memory/storage/: __init__.py  manager.py  models.py  queue.py
plugins/memory/utils/: config.py
plugins/message_basic/: __init__.py  handlers.py  models.py
plugins/persona/: README.md  README_NEO4J.md  __init__.py  plugin.py  psstate.py
plugins/persona/core/: __init__.py  memory_retriever.py  persona_system.py  retriever.py
plugins/persona/handlers/: __init__.py  management.py  memory.py  message.py  test.py
plugins/persona/memory/: __init__.py  decay.py  long_term.py  short_term.py
plugins/persona/processing/: __init__.py  ai.py  ai_processor.py  message_processor.py  prompt.py
plugins/persona/scripts/: migrate_to_neo4j.py  parse_chat_log.py
plugins/persona/storage/: __init__.py  memory_models.py  memory_repository.py  message_models.py  message_repository.py  models.py  repository.py
plugins/persona/utils/: __init__.py  config.py
plugins/plugin_policy/: __init__.py
plugins/restart/: README.md  __init__.py  config.py  restart_manager.py
plugins/weather/: __init__.py  weather.py
plugins/webui/: README.md  __init__.py  init_db.py  package-lock.json  package.json  run.py  test_api.py
plugins/webui/api/: __init__.py  main.py
plugins/webui/backend/: __init__.py  api.py  init_db.py  requirements.txt  run.py  stats.py  test_api.py
plugins/webui/frontend/: .env.preview  .env.production  DEVELOP.md  index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js  vitest.config.js
plugins/webui/templates/: dashboard.html  index.html
plugins/wordcloud/: README.md  __init__.py  api.py  backend.py  cleanup.py  command.py  config.py  models.py  window_policy.py  word_analyzer.py
scripts/: benchmark_dashboard_throughput.py  check_scheduler_rules.py  monitor_memory.py
scripts/restart/: check_restart_plugin.sh  log_diagnostics.py  restart.sh  start_bot.sh  test_restart.sh
src/: __init__.py
src/adapters/: __init__.py
src/adapters/nonebot/: __init__.py  command_args.py  command_list_renderer.py  command_registry.py  image_resolver.py  message_metadata.py  persona_assembler.py
src/core/: __init__.py  message_history_formatter.py
src/infra/: __init__.py  temp_storage.py
tests/: conftest.py
tests/infra/: test_temp_storage.py
tests/integration/: test_llm_availability.py
tests/memory/: TESTING.md  show_memory_db.py  test_memory_db.py
tests/plugins/: test_status.py
(+259 files in other folders)
