[project]
name = "ATRI_PROJ"
version = "0.1.0"
description = "ATRI_PROJ"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = []
builtin_plugins = ["echo", "single_session"]

[tool.poetry.dependencies]
nonebot-adapter-onebot = "^2.4.6"
nonebot-adapter-console = "^0.6.0"
nonebot2 = {extras = ["websockets"], version = "^2.4.2"}

[tool.ruff]
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "node_modules",
    "plugins/webui/static/webui",
]

[tool.ruff.lint]
# Keep scope minimal: only whitespace-related warnings.
select = ["W291", "W293"]
