[project]
name = "ATRI_PROJ"
version = "0.1.0"
description = "ATRI_PROJ"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.poetry]
name = "ATRI_PROJ"
version = "0.1.0"
description = "ATRI_PROJ"
authors = ["ATRI_PROJ Maintainers <noreply@example.com>"]
package-mode = false

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = []
builtin_plugins = ["echo", "single_session"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

# NoneBot core
nonebot2 = { extras = ["websockets"], version = ">=2.4.2,<3.0.0" }
nonebot-adapter-onebot = ">=2.4.6,<3.0.0"
nonebot-adapter-console = ">=0.6.0,<0.7.0"
nonebot-plugin-apscheduler = ">=0.5.0,<0.6.0"
nonebot-plugin-uninfo = ">=0.8.0,<0.9.0"
nonebot-plugin-alconna = ">=0.58.2,<0.59.0"

# Backend and API
fastapi = ">=0.100.0,<1.0.0"
uvicorn = ">=0.23.0,<1.0.0"
httpx = ">=0.24.1,<1.0.0"
websockets = ">=11.0.3,<16.0.0"
openai = ">=1.0.0,<2.0.0"
python-dotenv = ">=0.21.0,<2.0.0"
pyyaml = ">=6.0.1,<7.0.0"
pandas = ">=2.0.3,<3.0.0"
openpyxl = ">=3.1.2,<4.0.0"

# System
psutil = ">=5.9.0,<8.0.0"
pytz = ">=2022.1"
tzlocal = ">=4.2,<6.0.0"

# WebUI
python-jose = { extras = ["cryptography"], version = ">=3.3.0,<4.0.0" }
python-multipart = ">=0.0.5,<1.0.0"
requests = ">=2.28.1,<3.0.0"
pydantic = ">=2.0.0,<3.0.0,!=2.5.0,!=2.5.1,!=2.10.0,!=2.10.1"
pydantic-settings = ">=2.0.0,<3.0.0"
passlib = ">=1.7.4,<2.0.0"
bcrypt = ">=4.0.1,<5.0.0"
pyjwt = ">=2.0.0,<3.0.0"
tortoise-orm = ">=0.17.0,<1.0.0"

# Other
jieba = ">=0.42.1,<1.0.0"
neomodel = ">=5.0.0,<6.0.0"

[tool.ruff]
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "node_modules",
    "plugins/webui/static/webui",
]

[tool.ruff.lint]
# Keep scope minimal: only whitespace-related warnings.
select = ["W291", "W293"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
